force-app/main/default/objects/Tableau_Dashboard__c/Tableau_Dashboard__c.object-meta.xml
<CustomObject>
    <description>links to Tableau Dashboard</description>
    <label>Report/Dashboard</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Tableau Dashboard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reports/Dashboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>