force-app/main/default/objects/Tableau_Dashboard__c/fields/Add_Filters__c.field-meta.xml
<CustomField>
    <fullName>Add_Filters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Filters</label>
    <type>Checkbox</type>
</CustomField>