force-app/main/default/objects/Tableau_Dashboard__c/fields/CD_MS_SCC_Login_Filter__c.field-meta.xml
<CustomField>
    <fullName>CD_MS_SCC_Login_Filter__c</fullName>
    <description>CD MS SCC Login Filter</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CD MS SCC Login Filter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>