force-app/main/default/objects/Tableau_Dashboard__c/fields/CM_SCE_Login_Filter__c.field-meta.xml
<CustomField>
    <fullName>CM_SCE_Login_Filter__c</fullName>
    <defaultValue>&apos;CM SCE&apos;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>CM SCE Login Filter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>