force-app/main/default/objects/Tableau_Dashboard__c/fields/Dashboard_Name__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dashboard Name</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>