force-app/main/default/objects/Tableau_Dashboard__c/fields/Filter1__c.field-meta.xml
<CustomField>
    <fullName>Filter1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Static Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>