force-app/main/default/objects/Tableau_Dashboard__c/fields/Formula_Link__c.field-meta.xml
<CustomField>
    <fullName>Formula_Link__c</fullName>
    <formula>IF(Add_Filters__c = true,
IF(AND(NOT(ISBLANK(VP_Login_Filter__c)),$User.User_Role__c = &apos;CM VP&apos;),
HYPERLINK(Link__c+VP_Login_Filter__c+&apos;=&apos;+Logged_In_User__c+&apos;&amp;&apos;+Filter1__c+&apos;&amp;&apos;+Tableau_Properties__c,Link__c+VP_Login_Filter__c+&apos;=&apos;+Logged_In_User__c+&apos;&amp;&apos;+Filter1__c+&apos;&amp;&apos;+Tableau_Properties__c,&quot;_blank&quot;),

IF(AND(NOT(ISBLANK(VPCR_RVP_Login_Filter__c)),$User.User_Role__c = &apos;CM VPCR/RVP&apos;),
HYPERLINK(Link__c+VPCR_RVP_Login_Filter__c+&apos;=&apos;+Logged_In_User__c+&apos;&amp;&apos;+Filter1__c+&apos;&amp;&apos;+Tableau_Properties__c,Link__c+VPCR_RVP_Login_Filter__c+&apos;=&apos;+Logged_In_User__c+&apos;&amp;&apos;+Filter1__c+&apos;&amp;&apos;+Tableau_Properties__c,&quot;_blank&quot;),

IF(AND(NOT(ISBLANK(CM_SCE_Login_Filter__c)),$User.User_Role__c = &apos;CM SCE&apos;),
HYPERLINK(Link__c+CM_SCE_Login_Filter__c+&apos;=&apos;+Logged_In_User__c+&apos;&amp;&apos;+Filter1__c+&apos;&amp;&apos;+Tableau_Properties__c,Link__c+CM_SCE_Login_Filter__c+&apos;=&apos;+Logged_In_User__c+&apos;&amp;&apos;+Filter1__c+&apos;&amp;&apos;+Tableau_Properties__c,&quot;_blank&quot;),

IF(AND(NOT(ISBLANK(Specialty_Benefits_SCE_Login_Filter__c)),$User.User_Role__c = &apos;Specialty Benefits SCE&apos;),
HYPERLINK(Link__c+Specialty_Benefits_SCE_Login_Filter__c+&apos;=&apos;+Logged_In_User__c+&apos;&amp;&apos;+Filter1__c+&apos;&amp;&apos;+Tableau_Properties__c,Link__c+Specialty_Benefits_SCE_Login_Filter__c+&apos;=&apos;+Logged_In_User__c+&apos;&amp;&apos;+Filter1__c+&apos;&amp;&apos;+Tableau_Properties__c,&quot;_blank&quot;),


IF(AND(NOT(ISBLANK(CD_MS_SCC_Login_Filter__c )),$User.User_Role__c = &apos;CD MD/SSC&apos;),
HYPERLINK(Link__c+CD_MS_SCC_Login_Filter__c +&apos;=&apos;+Logged_In_User__c+&apos;&amp;&apos;+Filter1__c+&apos;&amp;&apos;+Tableau_Properties__c,Link__c+CD_MS_SCC_Login_Filter__c +&apos;=&apos;+Logged_In_User__c+&apos;&amp;&apos;+Filter1__c+&apos;&amp;&apos;+Tableau_Properties__c,&quot;_blank&quot;),


IF(NOT(ISBLANK(Filter1__c)),
HYPERLINK(Link__c+Filter1__c+&apos;&amp;&apos;+Tableau_Properties__c,Link__c+Filter1__c+&apos;&amp;&apos;+Tableau_Properties__c,&quot;_blank&quot;),

HYPERLINK(Link__c+Tableau_Properties__c,Link__c+Tableau_Properties__c,&quot;_blank&quot;)))))))


,HYPERLINK(Link__c,Link__c,&quot;_blank&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Link</label>
    <type>Text</type>
</CustomField>