force-app/main/default/objects/Tableau_Dashboard__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group</label>
    <length>150</length>
    <type>Text</type>
</CustomField>