force-app/main/default/objects/Tableau_Dashboard__c/fields/Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_User__c</fullName>
    <formula>$User.FirstName+&apos; &apos;+$User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged In User</label>
    <type>Text</type>
</CustomField>