force-app/main/default/objects/Tableau_Dashboard__c/fields/Logged_In_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_User_Role__c</fullName>
    <formula>$User.User_Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged In User Role</label>
    <type>Text</type>
</CustomField>