force-app/main/default/objects/Tableau_Dashboard__c/fields/Specialty_Benefits_SCE_Login_Filter__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Benefits_SCE_Login_Filter__c</fullName>
    <defaultValue>&quot;Specialty Benefits SCE&quot;</defaultValue>
    <description>Specialty Benefits SCE Login Filter</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Specialty Benefits SCE Login Filter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>