force-app/main/default/objects/Tableau_Dashboard__c/fields/Tab_Name__c.field-meta.xml
<CustomField>
    <fullName>Tab_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tab Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>