force-app/main/default/objects/Tableau_Dashboard__c/fields/Tableau_Properties__c.field-meta.xml
<CustomField>
    <fullName>Tableau_Properties__c</fullName>
    <defaultValue>&apos;iframeSizedToWindow=true&amp;%3Aembed=y&amp;%3AshowAppBanner=false&amp;%3Adisplay_count=no&amp;%3AshowVizHome=no#2&apos;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Tableau Properties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>