force-app/main/default/objects/Tableau_Dashboard__c/fields/VP_Login_Filter__c.field-meta.xml
<CustomField>
    <fullName>VP_Login_Filter__c</fullName>
    <defaultValue>&apos;VP&apos;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>VP Login Filter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>