force-app/main/default/objects/Tableau_Dashboard__c/fields/VPCR_RVP_Login_Filter__c.field-meta.xml
<CustomField>
    <fullName>VPCR_RVP_Login_Filter__c</fullName>
    <defaultValue>&apos;VPCR RVP&apos;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>VPCR RVP Login Filter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>