force-app/main/default/objects/Tableau_Dashboard__c/listViews/CD_Dashboards.listView-meta.xml
<ListView>
    <fullName>CD_Dashboards</fullName>
    <columns>Group__c</columns>
    <columns>Dashboard_Name__c</columns>
    <columns>Link__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>CD Dashboards</value>
    </filters>
    <label>CD Dashboards</label>
    <sharedTo>
        <group>Client_Survey_List_View_Sharing</group>
        <role>CDMDSSC</role>
        <role>CDSVP</role>
        <role>CDUnderWriters</role>
        <role>CDVP</role>
        <role>CMCSAD</role>
        <role>CRMAdministrator</role>
        <role>CRMIT_Administrator</role>
        <role>SeniorExecutives</role>
    </sharedTo>
</ListView>