force-app/main/default/objects/Tableau_Dashboard__c/listViews/Client_Survey_Downloads_and_Exceptions.listView-meta.xml
<ListView>
    <fullName>Client_Survey_Downloads_and_Exceptions</fullName>
    <columns>Group__c</columns>
    <columns>Dashboard_Name__c</columns>
    <columns>Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>Client Survey Downloads and Exceptions</value>
    </filters>
    <label>Client Survey Downloads and Exceptions</label>
    <sharedTo>
        <group>Client_Survey_List_View_Sharing</group>
        <role>CRMAdministrator</role>
        <role>CRMIT_Administrator</role>
    </sharedTo>
</ListView>