force-app/main/default/objects/Tableau_Dashboard__c/listViews/CSI.listView-meta.xml
<ListView>
    <fullName>CSI</fullName>
    <columns>Group__c</columns>
    <columns>Dashboard_Name__c</columns>
    <columns>Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>CSI</value>
    </filters>
    <label>CSI</label>
    <sharedTo>
        <role>CSI_Assoc_Director_IPM</role>
    </sharedTo>
</ListView>