force-app/main/default/objects/Tableau_Dashboard__c/listViews/Executive_Dashboards.listView-meta.xml
<ListView>
    <fullName>Executive_Dashboards</fullName>
    <columns>Order__c</columns>
    <columns>Dashboard_Name__c</columns>
    <columns>Formula_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>Executive Dashboards</value>
    </filters>
    <label>Executive Dashboards</label>
    <sharedTo>
        <group>Client_Survey_List_View_Sharing</group>
        <role>CDVP</role>
        <role>CMCSAD</role>
        <role>CMVP</role>
        <role>CRMAdministrator</role>
        <role>CRMIT_Administrator</role>
        <role>SeniorExecutives</role>
    </sharedTo>
</ListView>