force-app/main/default/objects/Tableau_Dashboard__c/listViews/Existing_Client_Dashboards.listView-meta.xml
<ListView>
    <fullName>Existing_Client_Dashboards</fullName>
    <columns>Group__c</columns>
    <columns>Dashboard_Name__c</columns>
    <columns>Formula_Link__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>Existing Client Dashboard</value>
    </filters>
    <label>Existing Client Dashboards</label>
    <sharedTo>
        <group>Client_Survey_List_View_Sharing</group>
        <role>CDMDSSC</role>
        <role>CDVP</role>
        <role>CMCSAD</role>
        <role>CMRVP</role>
        <role>CMSCE</role>
        <role>CMVP</role>
        <role>CRMAdministrator</role>
        <role>CRMIT_Administrator</role>
        <role>SeniorExecutives</role>
        <role>Specialty_Benefits_SCE</role>
    </sharedTo>
</ListView>