force-app/main/default/objects/Tableau_Dashboard__c/listViews/Finance.listView-meta.xml
<ListView>
    <fullName>Finance</fullName>
    <booleanFilter>(1 AND (2 OR 3 or (4 and 5))) or 6 OR 7</booleanFilter>
    <columns>Group__c</columns>
    <columns>Dashboard_Name__c</columns>
    <columns>Link__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>Finance</value>
    </filters>
    <filters>
        <field>Dashboard_Name__c</field>
        <operation>equals</operation>
        <value>Close Ratios</value>
    </filters>
    <filters>
        <field>Dashboard_Name__c</field>
        <operation>equals</operation>
        <value>Medical Sales Activity Report</value>
    </filters>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>Sales Activity Reports</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Strategic PartnershipsExecutive Dashboards</value>
    </filters>
    <filters>
        <field>Dashboard_Name__c</field>
        <operation>equals</operation>
        <value>NA Growth and Risk Summary 2025</value>
    </filters>
    <label>Finance</label>
    <sharedTo>
        <role>CRMAdministrator</role>
        <role>CRMIT_Administrator</role>
        <role>SeniorExecutives</role>
    </sharedTo>
</ListView>