force-app/main/default/objects/Tableau_Dashboard__c/listViews/Healthcare_Econ_Pricing.listView-meta.xml
<ListView>
    <fullName>Healthcare_Econ_Pricing</fullName>
    <columns>Group__c</columns>
    <columns>Dashboard_Name__c</columns>
    <columns>Formula_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>Healthcare Econ &amp; Pricing</value>
    </filters>
    <label>Healthcare Econ &amp; Pricing</label>
    <sharedTo>
        <role>CRMAdministrator</role>
        <role>SeniorExecutives</role>
    </sharedTo>
</ListView>