force-app/main/default/objects/Tableau_Dashboard__c/listViews/Incentive_Comp.listView-meta.xml
<ListView>
    <fullName>Incentive_Comp</fullName>
    <columns>Group__c</columns>
    <columns>Dashboard_Name__c</columns>
    <columns>Formula_Link__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>Incentive Comp</value>
    </filters>
    <label>Incentive Comp</label>
    <sharedTo>
        <role>CRMAdministrator</role>
        <role>CRMIT_Administrator</role>
        <role>Compensation_Team</role>
    </sharedTo>
</ListView>