force-app/main/default/objects/Tableau_Dashboard__c/listViews/List_of_Dashboards.listView-meta.xml
<ListView>
    <fullName>List_of_Dashboards</fullName>
    <columns>Group__c</columns>
    <columns>Dashboard_Name__c</columns>
    <columns>Link__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Group__c</field>
        <operation>notContain</operation>
        <value>retired</value>
    </filters>
    <filters>
        <field>Group__c</field>
        <operation>notContain</operation>
        <value>RETIRE</value>
    </filters>
    <label>List of Dashboards</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>