force-app/main/default/objects/Tableau_Dashboard__c/listViews/Sales_Activity_Dashboards.listView-meta.xml
<ListView>
    <fullName>Sales_Activity_Dashboards</fullName>
    <columns>Group__c</columns>
    <columns>Dashboard_Name__c</columns>
    <columns>Link__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>Sales Activity Reports</value>
    </filters>
    <label>Sales Activity Dashboards</label>
    <sharedTo>
        <role>CDMDSSC</role>
        <role>CMCSAD</role>
        <role>CRMAdministrator</role>
        <role>CRMIT_Administrator</role>
        <role>Compensation_Team</role>
        <role>GeneralExecutive</role>
        <role>SeniorExecutives</role>
    </sharedTo>
</ListView>