force-app/main/default/objects/Tableau_Dashboard__c/listViews/Sales_Insights.listView-meta.xml
<ListView>
    <fullName>Sales_Insights</fullName>
    <columns>Group__c</columns>
    <columns>Dashboard_Name__c</columns>
    <columns>Formula_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>Sales Insights</value>
    </filters>
    <label>Sales Insights</label>
    <sharedTo>
        <role>CRMAdministrator</role>
        <role>CRMIT_Administrator</role>
    </sharedTo>
</ListView>