force-app/main/default/objects/Tableau_Dashboard__c/listViews/Specialty_Benefits_Dashboards.listView-meta.xml
<ListView>
    <fullName>Specialty_Benefits_Dashboards</fullName>
    <columns>Group__c</columns>
    <columns>Dashboard_Name__c</columns>
    <columns>Link__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>Specialty Benefits Dashboards</value>
    </filters>
    <label>Specialty Benefits Dashboards</label>
    <sharedTo>
        <group>Client_Survey_List_View_Sharing</group>
        <role>CDMDSSC</role>
        <role>CMRVP</role>
        <role>CRMAdministrator</role>
        <role>CRMIT_Administrator</role>
        <role>SeniorExecutives</role>
        <role>Specialty_Benefits_SCE</role>
        <role>Specialty_Benefits_SVP</role>
    </sharedTo>
</ListView>