force-app/main/default/objects/Tableau_Dashboard__c/listViews/Surest.listView-meta.xml
<ListView>
    <fullName>Surest</fullName>
    <columns>Dashboard_Name__c</columns>
    <columns>Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>Surest Dashboards</value>
    </filters>
    <label>Surest</label>
    <sharedTo>
        <group>Reports_Dashboards_Group</group>
        <role>SeniorExecutives</role>
        <role>Surest_CM_Champion</role>
    </sharedTo>
</ListView>