force-app/main/default/objects/Tableau_Dashboard__c/listViews/Surest_Clients_Reference_Request.listView-meta.xml
<ListView>
    <fullName>Surest_Clients_Reference_Request</fullName>
    <columns>Dashboard_Name__c</columns>
    <columns>Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dashboard_Name__c</field>
        <operation>equals</operation>
        <value>Surest Client Reference</value>
    </filters>
    <label>Surest Clients Reference Request</label>
    <sharedTo>
        <role>CRMAdministrator</role>
        <role>CRMIT_Administrator</role>
        <role>SeniorExecutives</role>
        <role>Surest_CD_SVP</role>
        <role>Surest_CM_Champion</role>
        <role>Surest_CM_SVP</role>
    </sharedTo>
</ListView>